--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Best Food Places in Long Beach</h1>
+    <h1>Best Food Places in L.A</h1>
     <div id="card-container"></div>
     
     <!-- Your scripts.js file should be linked at the bottom of the body to ensure the HTML is loaded before the JS runs -->
